@@ -46,7 +46,8 @@ void TmpFileUpdateMetaData(TmpFile *tmpFile,
 		AlignEntries *a)
 {
 	if(SingleEnd == a->pairedEnd ||
-			AlignEntryCompareAtIndex(a->entriesOne, 0, a->entriesTwo, 0, AlignEntrySortByContigPos) < 0) {
+			(1 == a->numEntriesOne && 0 == a->numEntriesTwo) ||
+			(1 == a->numEntriesOne && 1 == a->numEntriesTwo && AlignEntryCompareAtIndex(a->entriesOne, 0, a->entriesTwo, 0, AlignEntrySortByContigPos) < 0)) {
 		TmpFileUpdateMetaDataHelper(tmpFile, &a->entriesOne[0]);
 	}
 	else {
@@ -102,8 +103,14 @@ void MoveAllIntoTmpFile(char *inputFileName,
 		counter++;
 
 		/* Store AlignEntries */
-		if(a.numEntriesOne != 1 ||
-				(a.pairedEnd == PairedEnd && 1 < a.numEntriesTwo )) {
+		if((SingleEnd == a.pairedEnd && 1 != a.numEntriesOne) ||
+				(PairedEnd == a.pairedEnd && 
+				 !(1 == a.numEntriesOne && 1 == a.numEntriesTwo) &&
+				 !(0 == a.numEntriesOne && 1 == a.numEntriesTwo) &&
+				 !(1 == a.numEntriesOne && 0 == a.numEntriesTwo ))) {
+			fprintf(stderr, "\n%d\t%d\n",
+					a.numEntriesOne,
+					a.numEntriesTwo);
 			PrintError(FnName,
 					a.readName,
 					"Read was not uniquely aligned",
@@ -111,7 +118,6 @@ void MoveAllIntoTmpFile(char *inputFileName,
 					OutOfRange);
 		}
 		else {
-			assert(a.numEntriesOne == 1 && (SingleEnd == a.pairedEnd || a.numEntriesTwo <= 1));
 			AlignEntriesPrint(&a, 
 					tmpFile->FP,
 					BinaryOutput);
@@ -316,8 +322,8 @@ void SplitEntriesAndPrint(FILE *outputFP,
 					BinaryInput)) {
 
 			if(SingleEnd == a.pairedEnd ||
-					0 == a.numEntriesTwo ||
-					AlignEntryCompareAtIndex(a.entriesOne, 0, a.entriesTwo, 0, AlignEntrySortByContigPos) < 0) {
+					(1 == a.numEntriesOne && 0 == a.numEntriesTwo) ||
+					(1 == a.numEntriesOne && 1 == a.numEntriesTwo && AlignEntryCompareAtIndex(a.entriesOne, 0, a.entriesTwo, 0, AlignEntrySortByContigPos) < 0)) {
 				tmpAlignEntry = &a.entriesOne[0];
 			}
 			else {
